--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@
 .header{
 	width: 100vw;
 	height: 100vh;
-	background-image: url(./images/reel-back.jpg);
+	background-image: url('. /images/reel-back.jpg');
 	background-position: bottom;
 	background-size: cover;
 	display: flex;
 	align-items: flex-end;
 	justify-content: center;
+}
+.header-content{
+	margin-bottom: 150px;
 }
