--- a/style.css
+++ b/style.css
@@ -1,12 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
-.header{
+a{
+	text-decoration: none;
+}
+ul{
+	list-style: none;
+}
+.active{
+	color: #fc036b;
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+/* navbar */ 
+.navbar{
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	padding: 20px;
+	color: whitesmoke;
+}
+.nav-links{
+	display: flex;
+	align-items: center;
+}
+.nav-links li{
+	margin: 0 30px;
+}
+header{
 	width: 100vw;
 	height: 100vh;
-	background-image: url('. /images/reel-back.jpg');
+	background-image: url('./images/reel-back.jpg');
 	background-position: bottom;
 	background-size: cover;
 	display: flex;
@@ -15,4 +47,27 @@
 }
 .header-content{
 	margin-bottom: 150px;
+	color: whitesmoke;
+	text-align: center;
+}
+.header-content h2{
+	font-size: 4vmin;
+}
+.line{
+	width: 150px;
+	height: 4px;
+	background: #fc036b;
+	margin: 10px auto;
+	border-radius: 5px;
+}
+.header-content h1{
+	font-size: 7vmin;
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
+.ctn{
+	padding: 8px 15px;
+	background: #fc036b;
+	border-radius: 30px;
+	color: whitesmoke;
 }
