--- a/style.css
+++ b/style.css
@@ -72,3 +72,41 @@ header{
 	border-radius: 30px;
 	color: whitesmoke;
 }
+.menu-btn{
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	width: 40px;
+	cursor: pointer;
+	display: none;
+}
+/* mobile device */
+@media only screen and (max-width:850px){
+	.menu-btn{
+		display: block;
+	}
+    .navbar{
+	     padding: 0;
+	}
+	.logo{
+		position: absolute;
+		top: 30px;
+		left: 30px;
+	}
+	.nav-links{
+		flex-direction: column;
+		width: 100%;
+		height: 100vh;
+		justify-content: center;
+		background: #484872;
+		margin-top: -900px;
+		transition: all 0.5s ease;
+	}
+	.mobile-menu{
+		margin-top: 0px;
+		border-bottom-right-radius: 30%;
+	}
+	.nav-links li{
+		margin: 30px auto;
+	}
+}
