--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ ul{
 	text-decoration: underline;
 	font-weight: bold;
 }
+body, html{
+	overflow: hidden;
+}
 
 /* navbar */ 
 .navbar{
@@ -79,6 +82,43 @@ header{
 	width: 40px;
 	cursor: pointer;
 	display: none;
+}
+/* Events */ 
+section{
+	width: 80%;
+	margin: 80px auto;
+}
+.title{
+	text-align: center;
+	font-size: 4vmin;
+	color: #49497e;
+}
+.row{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	justify-content: space-between;
+}
+.row .col{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+.events .row{
+	margin-top: 50px;
+}
+h4{
+	font-size: 3vmin;
+	color: #484872;
+	margin: 20px auto;
+}
+p{
+	color: #7c7c7c;
+	padding: 0px 40px;
+}
+.events .ctn{
+	margin-top: 30px;
 }
 /* mobile device */
 @media only screen and (max-width:850px){
