--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ section{
 	align-items: center;
 	width: 100%;
 	justify-content: space-between;
+	background: cyan;
 }
 .row .col{
 	display: flex;
@@ -116,6 +117,24 @@ p{
 }
 .events .ctn{
 	margin-top: 30px;
+}
+.explore{
+	width: 100%;
+	height: 100vh;
+	background-image: url('./images/IMG-20201231-WA0001\ \(1\).jpg');
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	display: flex;
+	align-items: center;
+}
+.explore-content{
+	width: 60%;
+	padding: 50px;
+	color: whitesmoke;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 /* mobile device */
 @media only screen and (max-width:850px){
