--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=poppins');
+/* Goolge fonts */ 
+ @import url('https://fonts.googleapis.com/css2?family=poppins');
+
+ /* ===== Global ===== */
 
 * {
 	margin: 0;
@@ -118,6 +121,10 @@ p{
 .events .ctn{
 	margin-top: 30px;
 }
+/* End Events */
+
+/* explore */ 
+
 .explore{
 	width: 100%;
 	height: 100vh;
@@ -136,6 +143,22 @@ p{
 	align-items: center;
 	flex-direction: column;
 }
+.explore-content h1{
+	font-size: 7vmin;
+}
+.explore-content .line{
+	margin-bottom: 50px;
+}
+.explore-content p{
+	color: rgb(red, green, blue);
+	font-size: 3vmin;
+}
+.explore-content .ctn{
+	margin-top: 40px;
+}
+
+/* end explore */ 
+
 /* mobile device */
 @media only screen and (max-width:850px){
 	.menu-btn{
