--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ p{
 .content-col .ctn{
 	margin-left: -100px; 
 }
+/* end tours */
 
 .footer{
 	width: 100%;
@@ -209,7 +210,7 @@ p{
 	margin: 20px auto;
 	padding: 20px auto;
 }
-/* end tours */ 
+ 
 
 /* mobile device */
 @media only screen and (max-width:850px){
@@ -240,4 +241,55 @@ p{
 	.nav-links li{
 		margin: 30px auto;
 	}
+
+	/*  Events */
+	.row{
+		flex-direction: column;
+	}
+	.row .col{
+		margin: 20px auto;
+	}
+	.col img{
+		max-width: 90%;
+	}
+	/* End Events */
+
+	/* explore */ 
+	.explore-content{
+		width: 100%;
+	}
+	/* end explore */ 
+
+	/* tours */
+
+	.tours .col{
+		width: 100%;
+
+	}
+	.image-gallery{
+		justify-content: center;
+		align-items: center;
+	}
+	.image-gallery img{
+		width: 90%;
+	}
+	/* end tours */
+	.footer{
+		padding: 10px;
+	}
+
+}
+
+/* Animations */
+img{
+	transition: transform .3s ease;
+}
+.ctn:hover{
+	background: whitesmoke;
+	color: #fc036b;
+	box-shadow: 2px 2px 5px #00000056;
+}
+.li:hover{
+	color: #fc036b;
+	cursor: pointer;
 }
